--- a/LoginExample1/WebContent/WEB-INF/web.xml
+++ b/LoginExample1/WebContent/WEB-INF/web.xml
@@ -30,4 +30,24 @@
 		<welcome-file>index.jsp</welcome-file>
 
 	</welcome-file-list>
+	
+	 <servlet>
+
+		<servlet-name>question</servlet-name>
+
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
+
+		<load-on-startup>1</load-on-startup>
+
+	</servlet>
+
+	<servlet-mapping>
+
+		<servlet-name>question</servlet-name>
+
+		<url-pattern>/question/*</url-pattern>
+
+	</servlet-mapping> 
+	
 </web-app>  
